// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Site: Table Basic Usage 1`] = `
Object {
  "docs": "",
  "html": "<table class=\\"drac-table\\">
  <thead>
    <tr>
      <th class=\\"drac-text drac-text-white\\">Name</th>
      <th class=\\"drac-text drac-text-white\\">Age</th>
    </tr>
  </thead>
  <tbody>
    <tr>
      <td class=\\"drac-text drac-text-white\\">Nandor</td>
      <td class=\\"drac-text drac-text-white\\">758 years</td>
    </tr>
    <tr>
      <td class=\\"drac-text drac-text-white\\">Nadja</td>
      <td class=\\"drac-text drac-text-white\\">512 years</td>
    </tr>
    <tr>
      <td class=\\"drac-text drac-text-white\\">Laszlo</td>
      <td class=\\"drac-text drac-text-white\\">329 years</td>
    </tr>
    <tr>
      <td class=\\"drac-text drac-text-white\\">Colin</td>
      <td class=\\"drac-text drac-text-white\\">103 years</td>
    </tr>
  </tbody>
</table>
",
  "react": "<Table>
  <thead>
    <tr>
      <th className=\\"drac-text drac-text-white\\">Name</th>
      <th className=\\"drac-text drac-text-white\\">Age</th>
    </tr>
  </thead>
  <tbody>
    <tr>
      <td className=\\"drac-text drac-text-white\\">Nandor</td>
      <td className=\\"drac-text drac-text-white\\">758 years</td>
    </tr>
    <tr>
      <td className=\\"drac-text drac-text-white\\">Nadja</td>
      <td className=\\"drac-text drac-text-white\\">512 years</td>
    </tr>
    <tr>
      <td className=\\"drac-text drac-text-white\\">Laszlo</td>
      <td className=\\"drac-text drac-text-white\\">329 years</td>
    </tr>
    <tr>
      <td className=\\"drac-text drac-text-white\\">Colin</td>
      <td className=\\"drac-text drac-text-white\\">103 years</td>
    </tr>
  </tbody>
</Table>;
",
  "title": "Usage",
}
`;

exports[`Site: Table Colors 1`] = `
Object {
  "docs": "",
  "html": "<div style=\\"display: flex; flex-direction: column; padding: 3rem\\">
  <div style=\\"margin-bottom: 50px\\">
    <table
      variant=\\"striped\\"
      color=\\"white\\"
      class=\\"drac-table drac-table-striped drac-table-white\\"
    >
      <thead>
        <tr>
          <th class=\\"drac-text drac-text-white\\">Name</th>
          <th class=\\"drac-text drac-text-white\\">Gender</th>
          <th class=\\"drac-text drac-text-white\\">Age</th>
          <th class=\\"drac-text drac-text-white\\">Provided by</th>
        </tr>
      </thead>
      <tbody>
        <tr>
          <td class=\\"drac-text drac-text-white\\">Nandor</td>
          <td class=\\"drac-text drac-text-white\\">Male</td>
          <td class=\\"drac-text drac-text-white\\">758 years</td>
          <td class=\\"drac-text drac-text-white\\">Kayvan Novak</td>
        </tr>
        <tr>
          <td class=\\"drac-text drac-text-white\\">Nadja</td>
          <td class=\\"drac-text drac-text-white\\">Female</td>
          <td class=\\"drac-text drac-text-white\\">512 years</td>
          <td class=\\"drac-text drac-text-white\\">Natasia Demetriou</td>
        </tr>
        <tr>
          <td class=\\"drac-text drac-text-white\\">Laszlo</td>
          <td class=\\"drac-text drac-text-white\\">Male</td>
          <td class=\\"drac-text drac-text-white\\">329 years</td>
          <td class=\\"drac-text drac-text-white\\">Matt Berry</td>
        </tr>
        <tr>
          <td class=\\"drac-text drac-text-white\\">Colin</td>
          <td class=\\"drac-text drac-text-white\\">Male</td>
          <td class=\\"drac-text drac-text-white\\">103 years</td>
          <td class=\\"drac-text drac-text-white\\">Mark Proksch</td>
        </tr>
      </tbody>
    </table>
  </div>
  <div style=\\"margin-bottom: 50px\\">
    <table
      variant=\\"striped\\"
      color=\\"cyan\\"
      class=\\"drac-table drac-table-striped drac-table-cyan\\"
    >
      <thead>
        <tr>
          <th class=\\"drac-text drac-text-white\\">Name</th>
          <th class=\\"drac-text drac-text-white\\">Gender</th>
          <th class=\\"drac-text drac-text-white\\">Age</th>
          <th class=\\"drac-text drac-text-white\\">Provided by</th>
        </tr>
      </thead>
      <tbody>
        <tr>
          <td class=\\"drac-text drac-text-white\\">Nandor</td>
          <td class=\\"drac-text drac-text-white\\">Male</td>
          <td class=\\"drac-text drac-text-white\\">758 years</td>
          <td class=\\"drac-text drac-text-white\\">Kayvan Novak</td>
        </tr>
        <tr>
          <td class=\\"drac-text drac-text-white\\">Nadja</td>
          <td class=\\"drac-text drac-text-white\\">Female</td>
          <td class=\\"drac-text drac-text-white\\">512 years</td>
          <td class=\\"drac-text drac-text-white\\">Natasia Demetriou</td>
        </tr>
        <tr>
          <td class=\\"drac-text drac-text-white\\">Laszlo</td>
          <td class=\\"drac-text drac-text-white\\">Male</td>
          <td class=\\"drac-text drac-text-white\\">329 years</td>
          <td class=\\"drac-text drac-text-white\\">Matt Berry</td>
        </tr>
        <tr>
          <td class=\\"drac-text drac-text-white\\">Colin</td>
          <td class=\\"drac-text drac-text-white\\">Male</td>
          <td class=\\"drac-text drac-text-white\\">103 years</td>
          <td class=\\"drac-text drac-text-white\\">Mark Proksch</td>
        </tr>
      </tbody>
    </table>
  </div>
  <div style=\\"margin-bottom: 50px\\">
    <table
      variant=\\"striped\\"
      color=\\"green\\"
      class=\\"drac-table drac-table-striped drac-table-green\\"
    >
      <thead>
        <tr>
          <th class=\\"drac-text drac-text-white\\">Name</th>
          <th class=\\"drac-text drac-text-white\\">Gender</th>
          <th class=\\"drac-text drac-text-white\\">Age</th>
          <th class=\\"drac-text drac-text-white\\">Provided by</th>
        </tr>
      </thead>
      <tbody>
        <tr>
          <td class=\\"drac-text drac-text-white\\">Nandor</td>
          <td class=\\"drac-text drac-text-white\\">Male</td>
          <td class=\\"drac-text drac-text-white\\">758 years</td>
          <td class=\\"drac-text drac-text-white\\">Kayvan Novak</td>
        </tr>
        <tr>
          <td class=\\"drac-text drac-text-white\\">Nadja</td>
          <td class=\\"drac-text drac-text-white\\">Female</td>
          <td class=\\"drac-text drac-text-white\\">512 years</td>
          <td class=\\"drac-text drac-text-white\\">Natasia Demetriou</td>
        </tr>
        <tr>
          <td class=\\"drac-text drac-text-white\\">Laszlo</td>
          <td class=\\"drac-text drac-text-white\\">Male</td>
          <td class=\\"drac-text drac-text-white\\">329 years</td>
          <td class=\\"drac-text drac-text-white\\">Matt Berry</td>
        </tr>
        <tr>
          <td class=\\"drac-text drac-text-white\\">Colin</td>
          <td class=\\"drac-text drac-text-white\\">Male</td>
          <td class=\\"drac-text drac-text-white\\">103 years</td>
          <td class=\\"drac-text drac-text-white\\">Mark Proksch</td>
        </tr>
      </tbody>
    </table>
  </div>
  <div style=\\"margin-bottom: 50px\\">
    <table
      variant=\\"striped\\"
      color=\\"orange\\"
      class=\\"drac-table drac-table-striped drac-table-orange\\"
    >
      <thead>
        <tr>
          <th class=\\"drac-text drac-text-white\\">Name</th>
          <th class=\\"drac-text drac-text-white\\">Gender</th>
          <th class=\\"drac-text drac-text-white\\">Age</th>
          <th class=\\"drac-text drac-text-white\\">Provided by</th>
        </tr>
      </thead>
      <tbody>
        <tr>
          <td class=\\"drac-text drac-text-white\\">Nandor</td>
          <td class=\\"drac-text drac-text-white\\">Male</td>
          <td class=\\"drac-text drac-text-white\\">758 years</td>
          <td class=\\"drac-text drac-text-white\\">Kayvan Novak</td>
        </tr>
        <tr>
          <td class=\\"drac-text drac-text-white\\">Nadja</td>
          <td class=\\"drac-text drac-text-white\\">Female</td>
          <td class=\\"drac-text drac-text-white\\">512 years</td>
          <td class=\\"drac-text drac-text-white\\">Natasia Demetriou</td>
        </tr>
        <tr>
          <td class=\\"drac-text drac-text-white\\">Laszlo</td>
          <td class=\\"drac-text drac-text-white\\">Male</td>
          <td class=\\"drac-text drac-text-white\\">329 years</td>
          <td class=\\"drac-text drac-text-white\\">Matt Berry</td>
        </tr>
        <tr>
          <td class=\\"drac-text drac-text-white\\">Colin</td>
          <td class=\\"drac-text drac-text-white\\">Male</td>
          <td class=\\"drac-text drac-text-white\\">103 years</td>
          <td class=\\"drac-text drac-text-white\\">Mark Proksch</td>
        </tr>
      </tbody>
    </table>
  </div>
  <div style=\\"margin-bottom: 50px\\">
    <table
      variant=\\"striped\\"
      color=\\"pink\\"
      class=\\"drac-table drac-table-striped drac-table-pink\\"
    >
      <thead>
        <tr>
          <th class=\\"drac-text drac-text-white\\">Name</th>
          <th class=\\"drac-text drac-text-white\\">Gender</th>
          <th class=\\"drac-text drac-text-white\\">Age</th>
          <th class=\\"drac-text drac-text-white\\">Provided by</th>
        </tr>
      </thead>
      <tbody>
        <tr>
          <td class=\\"drac-text drac-text-white\\">Nandor</td>
          <td class=\\"drac-text drac-text-white\\">Male</td>
          <td class=\\"drac-text drac-text-white\\">758 years</td>
          <td class=\\"drac-text drac-text-white\\">Kayvan Novak</td>
        </tr>
        <tr>
          <td class=\\"drac-text drac-text-white\\">Nadja</td>
          <td class=\\"drac-text drac-text-white\\">Female</td>
          <td class=\\"drac-text drac-text-white\\">512 years</td>
          <td class=\\"drac-text drac-text-white\\">Natasia Demetriou</td>
        </tr>
        <tr>
          <td class=\\"drac-text drac-text-white\\">Laszlo</td>
          <td class=\\"drac-text drac-text-white\\">Male</td>
          <td class=\\"drac-text drac-text-white\\">329 years</td>
          <td class=\\"drac-text drac-text-white\\">Matt Berry</td>
        </tr>
        <tr>
          <td class=\\"drac-text drac-text-white\\">Colin</td>
          <td class=\\"drac-text drac-text-white\\">Male</td>
          <td class=\\"drac-text drac-text-white\\">103 years</td>
          <td class=\\"drac-text drac-text-white\\">Mark Proksch</td>
        </tr>
      </tbody>
    </table>
  </div>
  <div style=\\"margin-bottom: 50px\\">
    <table
      variant=\\"striped\\"
      color=\\"purple\\"
      class=\\"drac-table drac-table-striped drac-table-purple\\"
    >
      <thead>
        <tr>
          <th class=\\"drac-text drac-text-white\\">Name</th>
          <th class=\\"drac-text drac-text-white\\">Gender</th>
          <th class=\\"drac-text drac-text-white\\">Age</th>
          <th class=\\"drac-text drac-text-white\\">Provided by</th>
        </tr>
      </thead>
      <tbody>
        <tr>
          <td class=\\"drac-text drac-text-white\\">Nandor</td>
          <td class=\\"drac-text drac-text-white\\">Male</td>
          <td class=\\"drac-text drac-text-white\\">758 years</td>
          <td class=\\"drac-text drac-text-white\\">Kayvan Novak</td>
        </tr>
        <tr>
          <td class=\\"drac-text drac-text-white\\">Nadja</td>
          <td class=\\"drac-text drac-text-white\\">Female</td>
          <td class=\\"drac-text drac-text-white\\">512 years</td>
          <td class=\\"drac-text drac-text-white\\">Natasia Demetriou</td>
        </tr>
        <tr>
          <td class=\\"drac-text drac-text-white\\">Laszlo</td>
          <td class=\\"drac-text drac-text-white\\">Male</td>
          <td class=\\"drac-text drac-text-white\\">329 years</td>
          <td class=\\"drac-text drac-text-white\\">Matt Berry</td>
        </tr>
        <tr>
          <td class=\\"drac-text drac-text-white\\">Colin</td>
          <td class=\\"drac-text drac-text-white\\">Male</td>
          <td class=\\"drac-text drac-text-white\\">103 years</td>
          <td class=\\"drac-text drac-text-white\\">Mark Proksch</td>
        </tr>
      </tbody>
    </table>
  </div>
  <div style=\\"margin-bottom: 50px\\">
    <table
      variant=\\"striped\\"
      color=\\"red\\"
      class=\\"drac-table drac-table-striped drac-table-red\\"
    >
      <thead>
        <tr>
          <th class=\\"drac-text drac-text-white\\">Name</th>
          <th class=\\"drac-text drac-text-white\\">Gender</th>
          <th class=\\"drac-text drac-text-white\\">Age</th>
          <th class=\\"drac-text drac-text-white\\">Provided by</th>
        </tr>
      </thead>
      <tbody>
        <tr>
          <td class=\\"drac-text drac-text-white\\">Nandor</td>
          <td class=\\"drac-text drac-text-white\\">Male</td>
          <td class=\\"drac-text drac-text-white\\">758 years</td>
          <td class=\\"drac-text drac-text-white\\">Kayvan Novak</td>
        </tr>
        <tr>
          <td class=\\"drac-text drac-text-white\\">Nadja</td>
          <td class=\\"drac-text drac-text-white\\">Female</td>
          <td class=\\"drac-text drac-text-white\\">512 years</td>
          <td class=\\"drac-text drac-text-white\\">Natasia Demetriou</td>
        </tr>
        <tr>
          <td class=\\"drac-text drac-text-white\\">Laszlo</td>
          <td class=\\"drac-text drac-text-white\\">Male</td>
          <td class=\\"drac-text drac-text-white\\">329 years</td>
          <td class=\\"drac-text drac-text-white\\">Matt Berry</td>
        </tr>
        <tr>
          <td class=\\"drac-text drac-text-white\\">Colin</td>
          <td class=\\"drac-text drac-text-white\\">Male</td>
          <td class=\\"drac-text drac-text-white\\">103 years</td>
          <td class=\\"drac-text drac-text-white\\">Mark Proksch</td>
        </tr>
      </tbody>
    </table>
  </div>
  <div style=\\"margin-bottom: 50px\\">
    <table
      variant=\\"striped\\"
      color=\\"yellow\\"
      class=\\"drac-table drac-table-striped drac-table-yellow\\"
    >
      <thead>
        <tr>
          <th class=\\"drac-text drac-text-white\\">Name</th>
          <th class=\\"drac-text drac-text-white\\">Gender</th>
          <th class=\\"drac-text drac-text-white\\">Age</th>
          <th class=\\"drac-text drac-text-white\\">Provided by</th>
        </tr>
      </thead>
      <tbody>
        <tr>
          <td class=\\"drac-text drac-text-white\\">Nandor</td>
          <td class=\\"drac-text drac-text-white\\">Male</td>
          <td class=\\"drac-text drac-text-white\\">758 years</td>
          <td class=\\"drac-text drac-text-white\\">Kayvan Novak</td>
        </tr>
        <tr>
          <td class=\\"drac-text drac-text-white\\">Nadja</td>
          <td class=\\"drac-text drac-text-white\\">Female</td>
          <td class=\\"drac-text drac-text-white\\">512 years</td>
          <td class=\\"drac-text drac-text-white\\">Natasia Demetriou</td>
        </tr>
        <tr>
          <td class=\\"drac-text drac-text-white\\">Laszlo</td>
          <td class=\\"drac-text drac-text-white\\">Male</td>
          <td class=\\"drac-text drac-text-white\\">329 years</td>
          <td class=\\"drac-text drac-text-white\\">Matt Berry</td>
        </tr>
        <tr>
          <td class=\\"drac-text drac-text-white\\">Colin</td>
          <td class=\\"drac-text drac-text-white\\">Male</td>
          <td class=\\"drac-text drac-text-white\\">103 years</td>
          <td class=\\"drac-text drac-text-white\\">Mark Proksch</td>
        </tr>
      </tbody>
    </table>
  </div>
  <div style=\\"margin-bottom: 50px\\">
    <table
      variant=\\"striped\\"
      color=\\"animated\\"
      class=\\"drac-table drac-table-striped\\"
    >
      <thead>
        <tr>
          <th class=\\"drac-text drac-text-white\\">Name</th>
          <th class=\\"drac-text drac-text-white\\">Gender</th>
          <th class=\\"drac-text drac-text-white\\">Age</th>
          <th class=\\"drac-text drac-text-white\\">Provided by</th>
        </tr>
      </thead>
      <tbody>
        <tr>
          <td class=\\"drac-text drac-text-white\\">Nandor</td>
          <td class=\\"drac-text drac-text-white\\">Male</td>
          <td class=\\"drac-text drac-text-white\\">758 years</td>
          <td class=\\"drac-text drac-text-white\\">Kayvan Novak</td>
        </tr>
        <tr>
          <td class=\\"drac-text drac-text-white\\">Nadja</td>
          <td class=\\"drac-text drac-text-white\\">Female</td>
          <td class=\\"drac-text drac-text-white\\">512 years</td>
          <td class=\\"drac-text drac-text-white\\">Natasia Demetriou</td>
        </tr>
        <tr>
          <td class=\\"drac-text drac-text-white\\">Laszlo</td>
          <td class=\\"drac-text drac-text-white\\">Male</td>
          <td class=\\"drac-text drac-text-white\\">329 years</td>
          <td class=\\"drac-text drac-text-white\\">Matt Berry</td>
        </tr>
        <tr>
          <td class=\\"drac-text drac-text-white\\">Colin</td>
          <td class=\\"drac-text drac-text-white\\">Male</td>
          <td class=\\"drac-text drac-text-white\\">103 years</td>
          <td class=\\"drac-text drac-text-white\\">Mark Proksch</td>
        </tr>
      </tbody>
    </table>
  </div>
  <div style=\\"margin-bottom: 50px\\">
    <table
      variant=\\"striped\\"
      color=\\"cyanGreen\\"
      class=\\"drac-table drac-table-striped\\"
    >
      <thead>
        <tr>
          <th class=\\"drac-text drac-text-white\\">Name</th>
          <th class=\\"drac-text drac-text-white\\">Gender</th>
          <th class=\\"drac-text drac-text-white\\">Age</th>
          <th class=\\"drac-text drac-text-white\\">Provided by</th>
        </tr>
      </thead>
      <tbody>
        <tr>
          <td class=\\"drac-text drac-text-white\\">Nandor</td>
          <td class=\\"drac-text drac-text-white\\">Male</td>
          <td class=\\"drac-text drac-text-white\\">758 years</td>
          <td class=\\"drac-text drac-text-white\\">Kayvan Novak</td>
        </tr>
        <tr>
          <td class=\\"drac-text drac-text-white\\">Nadja</td>
          <td class=\\"drac-text drac-text-white\\">Female</td>
          <td class=\\"drac-text drac-text-white\\">512 years</td>
          <td class=\\"drac-text drac-text-white\\">Natasia Demetriou</td>
        </tr>
        <tr>
          <td class=\\"drac-text drac-text-white\\">Laszlo</td>
          <td class=\\"drac-text drac-text-white\\">Male</td>
          <td class=\\"drac-text drac-text-white\\">329 years</td>
          <td class=\\"drac-text drac-text-white\\">Matt Berry</td>
        </tr>
        <tr>
          <td class=\\"drac-text drac-text-white\\">Colin</td>
          <td class=\\"drac-text drac-text-white\\">Male</td>
          <td class=\\"drac-text drac-text-white\\">103 years</td>
          <td class=\\"drac-text drac-text-white\\">Mark Proksch</td>
        </tr>
      </tbody>
    </table>
  </div>
  <div style=\\"margin-bottom: 50px\\">
    <table
      variant=\\"striped\\"
      color=\\"pinkPurple\\"
      class=\\"drac-table drac-table-striped\\"
    >
      <thead>
        <tr>
          <th class=\\"drac-text drac-text-white\\">Name</th>
          <th class=\\"drac-text drac-text-white\\">Gender</th>
          <th class=\\"drac-text drac-text-white\\">Age</th>
          <th class=\\"drac-text drac-text-white\\">Provided by</th>
        </tr>
      </thead>
      <tbody>
        <tr>
          <td class=\\"drac-text drac-text-white\\">Nandor</td>
          <td class=\\"drac-text drac-text-white\\">Male</td>
          <td class=\\"drac-text drac-text-white\\">758 years</td>
          <td class=\\"drac-text drac-text-white\\">Kayvan Novak</td>
        </tr>
        <tr>
          <td class=\\"drac-text drac-text-white\\">Nadja</td>
          <td class=\\"drac-text drac-text-white\\">Female</td>
          <td class=\\"drac-text drac-text-white\\">512 years</td>
          <td class=\\"drac-text drac-text-white\\">Natasia Demetriou</td>
        </tr>
        <tr>
          <td class=\\"drac-text drac-text-white\\">Laszlo</td>
          <td class=\\"drac-text drac-text-white\\">Male</td>
          <td class=\\"drac-text drac-text-white\\">329 years</td>
          <td class=\\"drac-text drac-text-white\\">Matt Berry</td>
        </tr>
        <tr>
          <td class=\\"drac-text drac-text-white\\">Colin</td>
          <td class=\\"drac-text drac-text-white\\">Male</td>
          <td class=\\"drac-text drac-text-white\\">103 years</td>
          <td class=\\"drac-text drac-text-white\\">Mark Proksch</td>
        </tr>
      </tbody>
    </table>
  </div>
  <div style=\\"margin-bottom: 50px\\">
    <table
      variant=\\"striped\\"
      color=\\"purpleCyan\\"
      class=\\"drac-table drac-table-striped\\"
    >
      <thead>
        <tr>
          <th class=\\"drac-text drac-text-white\\">Name</th>
          <th class=\\"drac-text drac-text-white\\">Gender</th>
          <th class=\\"drac-text drac-text-white\\">Age</th>
          <th class=\\"drac-text drac-text-white\\">Provided by</th>
        </tr>
      </thead>
      <tbody>
        <tr>
          <td class=\\"drac-text drac-text-white\\">Nandor</td>
          <td class=\\"drac-text drac-text-white\\">Male</td>
          <td class=\\"drac-text drac-text-white\\">758 years</td>
          <td class=\\"drac-text drac-text-white\\">Kayvan Novak</td>
        </tr>
        <tr>
          <td class=\\"drac-text drac-text-white\\">Nadja</td>
          <td class=\\"drac-text drac-text-white\\">Female</td>
          <td class=\\"drac-text drac-text-white\\">512 years</td>
          <td class=\\"drac-text drac-text-white\\">Natasia Demetriou</td>
        </tr>
        <tr>
          <td class=\\"drac-text drac-text-white\\">Laszlo</td>
          <td class=\\"drac-text drac-text-white\\">Male</td>
          <td class=\\"drac-text drac-text-white\\">329 years</td>
          <td class=\\"drac-text drac-text-white\\">Matt Berry</td>
        </tr>
        <tr>
          <td class=\\"drac-text drac-text-white\\">Colin</td>
          <td class=\\"drac-text drac-text-white\\">Male</td>
          <td class=\\"drac-text drac-text-white\\">103 years</td>
          <td class=\\"drac-text drac-text-white\\">Mark Proksch</td>
        </tr>
      </tbody>
    </table>
  </div>
  <div style=\\"margin-bottom: 50px\\">
    <table
      variant=\\"striped\\"
      color=\\"yellowPink\\"
      class=\\"drac-table drac-table-striped\\"
    >
      <thead>
        <tr>
          <th class=\\"drac-text drac-text-white\\">Name</th>
          <th class=\\"drac-text drac-text-white\\">Gender</th>
          <th class=\\"drac-text drac-text-white\\">Age</th>
          <th class=\\"drac-text drac-text-white\\">Provided by</th>
        </tr>
      </thead>
      <tbody>
        <tr>
          <td class=\\"drac-text drac-text-white\\">Nandor</td>
          <td class=\\"drac-text drac-text-white\\">Male</td>
          <td class=\\"drac-text drac-text-white\\">758 years</td>
          <td class=\\"drac-text drac-text-white\\">Kayvan Novak</td>
        </tr>
        <tr>
          <td class=\\"drac-text drac-text-white\\">Nadja</td>
          <td class=\\"drac-text drac-text-white\\">Female</td>
          <td class=\\"drac-text drac-text-white\\">512 years</td>
          <td class=\\"drac-text drac-text-white\\">Natasia Demetriou</td>
        </tr>
        <tr>
          <td class=\\"drac-text drac-text-white\\">Laszlo</td>
          <td class=\\"drac-text drac-text-white\\">Male</td>
          <td class=\\"drac-text drac-text-white\\">329 years</td>
          <td class=\\"drac-text drac-text-white\\">Matt Berry</td>
        </tr>
        <tr>
          <td class=\\"drac-text drac-text-white\\">Colin</td>
          <td class=\\"drac-text drac-text-white\\">Male</td>
          <td class=\\"drac-text drac-text-white\\">103 years</td>
          <td class=\\"drac-text drac-text-white\\">Mark Proksch</td>
        </tr>
      </tbody>
    </table>
  </div>
</div>
",
  "react": "<div style={{ display: \\"flex\\", flexDirection: \\"column\\", padding: \\"3rem\\" }}>
  <div style={{ marginBottom: 50 }}>
    <Table variant=\\"striped\\" color=\\"white\\">
      <thead>
        <tr>
          <th className=\\"drac-text drac-text-white\\">Name</th>
          <th className=\\"drac-text drac-text-white\\">Gender</th>
          <th className=\\"drac-text drac-text-white\\">Age</th>
          <th className=\\"drac-text drac-text-white\\">Provided by</th>
        </tr>
      </thead>
      <tbody>
        <tr>
          <td className=\\"drac-text drac-text-white\\">Nandor</td>
          <td className=\\"drac-text drac-text-white\\">Male</td>
          <td className=\\"drac-text drac-text-white\\">758 years</td>
          <td className=\\"drac-text drac-text-white\\">Kayvan Novak</td>
        </tr>
        <tr>
          <td className=\\"drac-text drac-text-white\\">Nadja</td>
          <td className=\\"drac-text drac-text-white\\">Female</td>
          <td className=\\"drac-text drac-text-white\\">512 years</td>
          <td className=\\"drac-text drac-text-white\\">Natasia Demetriou</td>
        </tr>
        <tr>
          <td className=\\"drac-text drac-text-white\\">Laszlo</td>
          <td className=\\"drac-text drac-text-white\\">Male</td>
          <td className=\\"drac-text drac-text-white\\">329 years</td>
          <td className=\\"drac-text drac-text-white\\">Matt Berry</td>
        </tr>
        <tr>
          <td className=\\"drac-text drac-text-white\\">Colin</td>
          <td className=\\"drac-text drac-text-white\\">Male</td>
          <td className=\\"drac-text drac-text-white\\">103 years</td>
          <td className=\\"drac-text drac-text-white\\">Mark Proksch</td>
        </tr>
      </tbody>
    </Table>
  </div>
  <div style={{ marginBottom: 50 }}>
    <Table variant=\\"striped\\" color=\\"cyan\\">
      <thead>
        <tr>
          <th className=\\"drac-text drac-text-white\\">Name</th>
          <th className=\\"drac-text drac-text-white\\">Gender</th>
          <th className=\\"drac-text drac-text-white\\">Age</th>
          <th className=\\"drac-text drac-text-white\\">Provided by</th>
        </tr>
      </thead>
      <tbody>
        <tr>
          <td className=\\"drac-text drac-text-white\\">Nandor</td>
          <td className=\\"drac-text drac-text-white\\">Male</td>
          <td className=\\"drac-text drac-text-white\\">758 years</td>
          <td className=\\"drac-text drac-text-white\\">Kayvan Novak</td>
        </tr>
        <tr>
          <td className=\\"drac-text drac-text-white\\">Nadja</td>
          <td className=\\"drac-text drac-text-white\\">Female</td>
          <td className=\\"drac-text drac-text-white\\">512 years</td>
          <td className=\\"drac-text drac-text-white\\">Natasia Demetriou</td>
        </tr>
        <tr>
          <td className=\\"drac-text drac-text-white\\">Laszlo</td>
          <td className=\\"drac-text drac-text-white\\">Male</td>
          <td className=\\"drac-text drac-text-white\\">329 years</td>
          <td className=\\"drac-text drac-text-white\\">Matt Berry</td>
        </tr>
        <tr>
          <td className=\\"drac-text drac-text-white\\">Colin</td>
          <td className=\\"drac-text drac-text-white\\">Male</td>
          <td className=\\"drac-text drac-text-white\\">103 years</td>
          <td className=\\"drac-text drac-text-white\\">Mark Proksch</td>
        </tr>
      </tbody>
    </Table>
  </div>
  <div style={{ marginBottom: 50 }}>
    <Table variant=\\"striped\\" color=\\"green\\">
      <thead>
        <tr>
          <th className=\\"drac-text drac-text-white\\">Name</th>
          <th className=\\"drac-text drac-text-white\\">Gender</th>
          <th className=\\"drac-text drac-text-white\\">Age</th>
          <th className=\\"drac-text drac-text-white\\">Provided by</th>
        </tr>
      </thead>
      <tbody>
        <tr>
          <td className=\\"drac-text drac-text-white\\">Nandor</td>
          <td className=\\"drac-text drac-text-white\\">Male</td>
          <td className=\\"drac-text drac-text-white\\">758 years</td>
          <td className=\\"drac-text drac-text-white\\">Kayvan Novak</td>
        </tr>
        <tr>
          <td className=\\"drac-text drac-text-white\\">Nadja</td>
          <td className=\\"drac-text drac-text-white\\">Female</td>
          <td className=\\"drac-text drac-text-white\\">512 years</td>
          <td className=\\"drac-text drac-text-white\\">Natasia Demetriou</td>
        </tr>
        <tr>
          <td className=\\"drac-text drac-text-white\\">Laszlo</td>
          <td className=\\"drac-text drac-text-white\\">Male</td>
          <td className=\\"drac-text drac-text-white\\">329 years</td>
          <td className=\\"drac-text drac-text-white\\">Matt Berry</td>
        </tr>
        <tr>
          <td className=\\"drac-text drac-text-white\\">Colin</td>
          <td className=\\"drac-text drac-text-white\\">Male</td>
          <td className=\\"drac-text drac-text-white\\">103 years</td>
          <td className=\\"drac-text drac-text-white\\">Mark Proksch</td>
        </tr>
      </tbody>
    </Table>
  </div>
  <div style={{ marginBottom: 50 }}>
    <Table variant=\\"striped\\" color=\\"orange\\">
      <thead>
        <tr>
          <th className=\\"drac-text drac-text-white\\">Name</th>
          <th className=\\"drac-text drac-text-white\\">Gender</th>
          <th className=\\"drac-text drac-text-white\\">Age</th>
          <th className=\\"drac-text drac-text-white\\">Provided by</th>
        </tr>
      </thead>
      <tbody>
        <tr>
          <td className=\\"drac-text drac-text-white\\">Nandor</td>
          <td className=\\"drac-text drac-text-white\\">Male</td>
          <td className=\\"drac-text drac-text-white\\">758 years</td>
          <td className=\\"drac-text drac-text-white\\">Kayvan Novak</td>
        </tr>
        <tr>
          <td className=\\"drac-text drac-text-white\\">Nadja</td>
          <td className=\\"drac-text drac-text-white\\">Female</td>
          <td className=\\"drac-text drac-text-white\\">512 years</td>
          <td className=\\"drac-text drac-text-white\\">Natasia Demetriou</td>
        </tr>
        <tr>
          <td className=\\"drac-text drac-text-white\\">Laszlo</td>
          <td className=\\"drac-text drac-text-white\\">Male</td>
          <td className=\\"drac-text drac-text-white\\">329 years</td>
          <td className=\\"drac-text drac-text-white\\">Matt Berry</td>
        </tr>
        <tr>
          <td className=\\"drac-text drac-text-white\\">Colin</td>
          <td className=\\"drac-text drac-text-white\\">Male</td>
          <td className=\\"drac-text drac-text-white\\">103 years</td>
          <td className=\\"drac-text drac-text-white\\">Mark Proksch</td>
        </tr>
      </tbody>
    </Table>
  </div>
  <div style={{ marginBottom: 50 }}>
    <Table variant=\\"striped\\" color=\\"pink\\">
      <thead>
        <tr>
          <th className=\\"drac-text drac-text-white\\">Name</th>
          <th className=\\"drac-text drac-text-white\\">Gender</th>
          <th className=\\"drac-text drac-text-white\\">Age</th>
          <th className=\\"drac-text drac-text-white\\">Provided by</th>
        </tr>
      </thead>
      <tbody>
        <tr>
          <td className=\\"drac-text drac-text-white\\">Nandor</td>
          <td className=\\"drac-text drac-text-white\\">Male</td>
          <td className=\\"drac-text drac-text-white\\">758 years</td>
          <td className=\\"drac-text drac-text-white\\">Kayvan Novak</td>
        </tr>
        <tr>
          <td className=\\"drac-text drac-text-white\\">Nadja</td>
          <td className=\\"drac-text drac-text-white\\">Female</td>
          <td className=\\"drac-text drac-text-white\\">512 years</td>
          <td className=\\"drac-text drac-text-white\\">Natasia Demetriou</td>
        </tr>
        <tr>
          <td className=\\"drac-text drac-text-white\\">Laszlo</td>
          <td className=\\"drac-text drac-text-white\\">Male</td>
          <td className=\\"drac-text drac-text-white\\">329 years</td>
          <td className=\\"drac-text drac-text-white\\">Matt Berry</td>
        </tr>
        <tr>
          <td className=\\"drac-text drac-text-white\\">Colin</td>
          <td className=\\"drac-text drac-text-white\\">Male</td>
          <td className=\\"drac-text drac-text-white\\">103 years</td>
          <td className=\\"drac-text drac-text-white\\">Mark Proksch</td>
        </tr>
      </tbody>
    </Table>
  </div>
  <div style={{ marginBottom: 50 }}>
    <Table variant=\\"striped\\" color=\\"purple\\">
      <thead>
        <tr>
          <th className=\\"drac-text drac-text-white\\">Name</th>
          <th className=\\"drac-text drac-text-white\\">Gender</th>
          <th className=\\"drac-text drac-text-white\\">Age</th>
          <th className=\\"drac-text drac-text-white\\">Provided by</th>
        </tr>
      </thead>
      <tbody>
        <tr>
          <td className=\\"drac-text drac-text-white\\">Nandor</td>
          <td className=\\"drac-text drac-text-white\\">Male</td>
          <td className=\\"drac-text drac-text-white\\">758 years</td>
          <td className=\\"drac-text drac-text-white\\">Kayvan Novak</td>
        </tr>
        <tr>
          <td className=\\"drac-text drac-text-white\\">Nadja</td>
          <td className=\\"drac-text drac-text-white\\">Female</td>
          <td className=\\"drac-text drac-text-white\\">512 years</td>
          <td className=\\"drac-text drac-text-white\\">Natasia Demetriou</td>
        </tr>
        <tr>
          <td className=\\"drac-text drac-text-white\\">Laszlo</td>
          <td className=\\"drac-text drac-text-white\\">Male</td>
          <td className=\\"drac-text drac-text-white\\">329 years</td>
          <td className=\\"drac-text drac-text-white\\">Matt Berry</td>
        </tr>
        <tr>
          <td className=\\"drac-text drac-text-white\\">Colin</td>
          <td className=\\"drac-text drac-text-white\\">Male</td>
          <td className=\\"drac-text drac-text-white\\">103 years</td>
          <td className=\\"drac-text drac-text-white\\">Mark Proksch</td>
        </tr>
      </tbody>
    </Table>
  </div>
  <div style={{ marginBottom: 50 }}>
    <Table variant=\\"striped\\" color=\\"red\\">
      <thead>
        <tr>
          <th className=\\"drac-text drac-text-white\\">Name</th>
          <th className=\\"drac-text drac-text-white\\">Gender</th>
          <th className=\\"drac-text drac-text-white\\">Age</th>
          <th className=\\"drac-text drac-text-white\\">Provided by</th>
        </tr>
      </thead>
      <tbody>
        <tr>
          <td className=\\"drac-text drac-text-white\\">Nandor</td>
          <td className=\\"drac-text drac-text-white\\">Male</td>
          <td className=\\"drac-text drac-text-white\\">758 years</td>
          <td className=\\"drac-text drac-text-white\\">Kayvan Novak</td>
        </tr>
        <tr>
          <td className=\\"drac-text drac-text-white\\">Nadja</td>
          <td className=\\"drac-text drac-text-white\\">Female</td>
          <td className=\\"drac-text drac-text-white\\">512 years</td>
          <td className=\\"drac-text drac-text-white\\">Natasia Demetriou</td>
        </tr>
        <tr>
          <td className=\\"drac-text drac-text-white\\">Laszlo</td>
          <td className=\\"drac-text drac-text-white\\">Male</td>
          <td className=\\"drac-text drac-text-white\\">329 years</td>
          <td className=\\"drac-text drac-text-white\\">Matt Berry</td>
        </tr>
        <tr>
          <td className=\\"drac-text drac-text-white\\">Colin</td>
          <td className=\\"drac-text drac-text-white\\">Male</td>
          <td className=\\"drac-text drac-text-white\\">103 years</td>
          <td className=\\"drac-text drac-text-white\\">Mark Proksch</td>
        </tr>
      </tbody>
    </Table>
  </div>
  <div style={{ marginBottom: 50 }}>
    <Table variant=\\"striped\\" color=\\"yellow\\">
      <thead>
        <tr>
          <th className=\\"drac-text drac-text-white\\">Name</th>
          <th className=\\"drac-text drac-text-white\\">Gender</th>
          <th className=\\"drac-text drac-text-white\\">Age</th>
          <th className=\\"drac-text drac-text-white\\">Provided by</th>
        </tr>
      </thead>
      <tbody>
        <tr>
          <td className=\\"drac-text drac-text-white\\">Nandor</td>
          <td className=\\"drac-text drac-text-white\\">Male</td>
          <td className=\\"drac-text drac-text-white\\">758 years</td>
          <td className=\\"drac-text drac-text-white\\">Kayvan Novak</td>
        </tr>
        <tr>
          <td className=\\"drac-text drac-text-white\\">Nadja</td>
          <td className=\\"drac-text drac-text-white\\">Female</td>
          <td className=\\"drac-text drac-text-white\\">512 years</td>
          <td className=\\"drac-text drac-text-white\\">Natasia Demetriou</td>
        </tr>
        <tr>
          <td className=\\"drac-text drac-text-white\\">Laszlo</td>
          <td className=\\"drac-text drac-text-white\\">Male</td>
          <td className=\\"drac-text drac-text-white\\">329 years</td>
          <td className=\\"drac-text drac-text-white\\">Matt Berry</td>
        </tr>
        <tr>
          <td className=\\"drac-text drac-text-white\\">Colin</td>
          <td className=\\"drac-text drac-text-white\\">Male</td>
          <td className=\\"drac-text drac-text-white\\">103 years</td>
          <td className=\\"drac-text drac-text-white\\">Mark Proksch</td>
        </tr>
      </tbody>
    </Table>
  </div>
  <div style={{ marginBottom: 50 }}>
    <Table variant=\\"striped\\" color=\\"animated\\">
      <thead>
        <tr>
          <th className=\\"drac-text drac-text-white\\">Name</th>
          <th className=\\"drac-text drac-text-white\\">Gender</th>
          <th className=\\"drac-text drac-text-white\\">Age</th>
          <th className=\\"drac-text drac-text-white\\">Provided by</th>
        </tr>
      </thead>
      <tbody>
        <tr>
          <td className=\\"drac-text drac-text-white\\">Nandor</td>
          <td className=\\"drac-text drac-text-white\\">Male</td>
          <td className=\\"drac-text drac-text-white\\">758 years</td>
          <td className=\\"drac-text drac-text-white\\">Kayvan Novak</td>
        </tr>
        <tr>
          <td className=\\"drac-text drac-text-white\\">Nadja</td>
          <td className=\\"drac-text drac-text-white\\">Female</td>
          <td className=\\"drac-text drac-text-white\\">512 years</td>
          <td className=\\"drac-text drac-text-white\\">Natasia Demetriou</td>
        </tr>
        <tr>
          <td className=\\"drac-text drac-text-white\\">Laszlo</td>
          <td className=\\"drac-text drac-text-white\\">Male</td>
          <td className=\\"drac-text drac-text-white\\">329 years</td>
          <td className=\\"drac-text drac-text-white\\">Matt Berry</td>
        </tr>
        <tr>
          <td className=\\"drac-text drac-text-white\\">Colin</td>
          <td className=\\"drac-text drac-text-white\\">Male</td>
          <td className=\\"drac-text drac-text-white\\">103 years</td>
          <td className=\\"drac-text drac-text-white\\">Mark Proksch</td>
        </tr>
      </tbody>
    </Table>
  </div>
  <div style={{ marginBottom: 50 }}>
    <Table variant=\\"striped\\" color=\\"cyanGreen\\">
      <thead>
        <tr>
          <th className=\\"drac-text drac-text-white\\">Name</th>
          <th className=\\"drac-text drac-text-white\\">Gender</th>
          <th className=\\"drac-text drac-text-white\\">Age</th>
          <th className=\\"drac-text drac-text-white\\">Provided by</th>
        </tr>
      </thead>
      <tbody>
        <tr>
          <td className=\\"drac-text drac-text-white\\">Nandor</td>
          <td className=\\"drac-text drac-text-white\\">Male</td>
          <td className=\\"drac-text drac-text-white\\">758 years</td>
          <td className=\\"drac-text drac-text-white\\">Kayvan Novak</td>
        </tr>
        <tr>
          <td className=\\"drac-text drac-text-white\\">Nadja</td>
          <td className=\\"drac-text drac-text-white\\">Female</td>
          <td className=\\"drac-text drac-text-white\\">512 years</td>
          <td className=\\"drac-text drac-text-white\\">Natasia Demetriou</td>
        </tr>
        <tr>
          <td className=\\"drac-text drac-text-white\\">Laszlo</td>
          <td className=\\"drac-text drac-text-white\\">Male</td>
          <td className=\\"drac-text drac-text-white\\">329 years</td>
          <td className=\\"drac-text drac-text-white\\">Matt Berry</td>
        </tr>
        <tr>
          <td className=\\"drac-text drac-text-white\\">Colin</td>
          <td className=\\"drac-text drac-text-white\\">Male</td>
          <td className=\\"drac-text drac-text-white\\">103 years</td>
          <td className=\\"drac-text drac-text-white\\">Mark Proksch</td>
        </tr>
      </tbody>
    </Table>
  </div>
  <div style={{ marginBottom: 50 }}>
    <Table variant=\\"striped\\" color=\\"pinkPurple\\">
      <thead>
        <tr>
          <th className=\\"drac-text drac-text-white\\">Name</th>
          <th className=\\"drac-text drac-text-white\\">Gender</th>
          <th className=\\"drac-text drac-text-white\\">Age</th>
          <th className=\\"drac-text drac-text-white\\">Provided by</th>
        </tr>
      </thead>
      <tbody>
        <tr>
          <td className=\\"drac-text drac-text-white\\">Nandor</td>
          <td className=\\"drac-text drac-text-white\\">Male</td>
          <td className=\\"drac-text drac-text-white\\">758 years</td>
          <td className=\\"drac-text drac-text-white\\">Kayvan Novak</td>
        </tr>
        <tr>
          <td className=\\"drac-text drac-text-white\\">Nadja</td>
          <td className=\\"drac-text drac-text-white\\">Female</td>
          <td className=\\"drac-text drac-text-white\\">512 years</td>
          <td className=\\"drac-text drac-text-white\\">Natasia Demetriou</td>
        </tr>
        <tr>
          <td className=\\"drac-text drac-text-white\\">Laszlo</td>
          <td className=\\"drac-text drac-text-white\\">Male</td>
          <td className=\\"drac-text drac-text-white\\">329 years</td>
          <td className=\\"drac-text drac-text-white\\">Matt Berry</td>
        </tr>
        <tr>
          <td className=\\"drac-text drac-text-white\\">Colin</td>
          <td className=\\"drac-text drac-text-white\\">Male</td>
          <td className=\\"drac-text drac-text-white\\">103 years</td>
          <td className=\\"drac-text drac-text-white\\">Mark Proksch</td>
        </tr>
      </tbody>
    </Table>
  </div>
  <div style={{ marginBottom: 50 }}>
    <Table variant=\\"striped\\" color=\\"purpleCyan\\">
      <thead>
        <tr>
          <th className=\\"drac-text drac-text-white\\">Name</th>
          <th className=\\"drac-text drac-text-white\\">Gender</th>
          <th className=\\"drac-text drac-text-white\\">Age</th>
          <th className=\\"drac-text drac-text-white\\">Provided by</th>
        </tr>
      </thead>
      <tbody>
        <tr>
          <td className=\\"drac-text drac-text-white\\">Nandor</td>
          <td className=\\"drac-text drac-text-white\\">Male</td>
          <td className=\\"drac-text drac-text-white\\">758 years</td>
          <td className=\\"drac-text drac-text-white\\">Kayvan Novak</td>
        </tr>
        <tr>
          <td className=\\"drac-text drac-text-white\\">Nadja</td>
          <td className=\\"drac-text drac-text-white\\">Female</td>
          <td className=\\"drac-text drac-text-white\\">512 years</td>
          <td className=\\"drac-text drac-text-white\\">Natasia Demetriou</td>
        </tr>
        <tr>
          <td className=\\"drac-text drac-text-white\\">Laszlo</td>
          <td className=\\"drac-text drac-text-white\\">Male</td>
          <td className=\\"drac-text drac-text-white\\">329 years</td>
          <td className=\\"drac-text drac-text-white\\">Matt Berry</td>
        </tr>
        <tr>
          <td className=\\"drac-text drac-text-white\\">Colin</td>
          <td className=\\"drac-text drac-text-white\\">Male</td>
          <td className=\\"drac-text drac-text-white\\">103 years</td>
          <td className=\\"drac-text drac-text-white\\">Mark Proksch</td>
        </tr>
      </tbody>
    </Table>
  </div>
  <div style={{ marginBottom: 50 }}>
    <Table variant=\\"striped\\" color=\\"yellowPink\\">
      <thead>
        <tr>
          <th className=\\"drac-text drac-text-white\\">Name</th>
          <th className=\\"drac-text drac-text-white\\">Gender</th>
          <th className=\\"drac-text drac-text-white\\">Age</th>
          <th className=\\"drac-text drac-text-white\\">Provided by</th>
        </tr>
      </thead>
      <tbody>
        <tr>
          <td className=\\"drac-text drac-text-white\\">Nandor</td>
          <td className=\\"drac-text drac-text-white\\">Male</td>
          <td className=\\"drac-text drac-text-white\\">758 years</td>
          <td className=\\"drac-text drac-text-white\\">Kayvan Novak</td>
        </tr>
        <tr>
          <td className=\\"drac-text drac-text-white\\">Nadja</td>
          <td className=\\"drac-text drac-text-white\\">Female</td>
          <td className=\\"drac-text drac-text-white\\">512 years</td>
          <td className=\\"drac-text drac-text-white\\">Natasia Demetriou</td>
        </tr>
        <tr>
          <td className=\\"drac-text drac-text-white\\">Laszlo</td>
          <td className=\\"drac-text drac-text-white\\">Male</td>
          <td className=\\"drac-text drac-text-white\\">329 years</td>
          <td className=\\"drac-text drac-text-white\\">Matt Berry</td>
        </tr>
        <tr>
          <td className=\\"drac-text drac-text-white\\">Colin</td>
          <td className=\\"drac-text drac-text-white\\">Male</td>
          <td className=\\"drac-text drac-text-white\\">103 years</td>
          <td className=\\"drac-text drac-text-white\\">Mark Proksch</td>
        </tr>
      </tbody>
    </Table>
  </div>
</div>;
",
  "title": "Colors",
}
`;

exports[`Site: Table Variants 1`] = `
Object {
  "docs": "",
  "html": "<div style=\\"display: flex; flex-direction: column; padding: 3rem\\">
  <div style=\\"margin-bottom: 50px\\">
    <table variant=\\"normal\\" class=\\"drac-table\\">
      <thead>
        <tr>
          <th class=\\"drac-text drac-text-white\\">Name</th>
          <th class=\\"drac-text drac-text-white\\">Gender</th>
          <th class=\\"drac-text drac-text-white\\">Age</th>
          <th class=\\"drac-text drac-text-white\\">Provided by</th>
        </tr>
      </thead>
      <tbody>
        <tr>
          <td class=\\"drac-text drac-text-white\\">Nandor</td>
          <td class=\\"drac-text drac-text-white\\">Male</td>
          <td class=\\"drac-text drac-text-white\\">758 years</td>
          <td class=\\"drac-text drac-text-white\\">Kayvan Novak</td>
        </tr>
        <tr>
          <td class=\\"drac-text drac-text-white\\">Nadja</td>
          <td class=\\"drac-text drac-text-white\\">Female</td>
          <td class=\\"drac-text drac-text-white\\">512 years</td>
          <td class=\\"drac-text drac-text-white\\">Natasia Demetriou</td>
        </tr>
        <tr>
          <td class=\\"drac-text drac-text-white\\">Laszlo</td>
          <td class=\\"drac-text drac-text-white\\">Male</td>
          <td class=\\"drac-text drac-text-white\\">329 years</td>
          <td class=\\"drac-text drac-text-white\\">Matt Berry</td>
        </tr>
        <tr>
          <td class=\\"drac-text drac-text-white\\">Colin</td>
          <td class=\\"drac-text drac-text-white\\">Male</td>
          <td class=\\"drac-text drac-text-white\\">103 years</td>
          <td class=\\"drac-text drac-text-white\\">Mark Proksch</td>
        </tr>
      </tbody>
    </table>
  </div>
  <div style=\\"margin-bottom: 50px\\">
    <table variant=\\"striped\\" class=\\"drac-table drac-table-striped\\">
      <thead>
        <tr>
          <th class=\\"drac-text drac-text-white\\">Name</th>
          <th class=\\"drac-text drac-text-white\\">Gender</th>
          <th class=\\"drac-text drac-text-white\\">Age</th>
          <th class=\\"drac-text drac-text-white\\">Provided by</th>
        </tr>
      </thead>
      <tbody>
        <tr>
          <td class=\\"drac-text drac-text-white\\">Nandor</td>
          <td class=\\"drac-text drac-text-white\\">Male</td>
          <td class=\\"drac-text drac-text-white\\">758 years</td>
          <td class=\\"drac-text drac-text-white\\">Kayvan Novak</td>
        </tr>
        <tr>
          <td class=\\"drac-text drac-text-white\\">Nadja</td>
          <td class=\\"drac-text drac-text-white\\">Female</td>
          <td class=\\"drac-text drac-text-white\\">512 years</td>
          <td class=\\"drac-text drac-text-white\\">Natasia Demetriou</td>
        </tr>
        <tr>
          <td class=\\"drac-text drac-text-white\\">Laszlo</td>
          <td class=\\"drac-text drac-text-white\\">Male</td>
          <td class=\\"drac-text drac-text-white\\">329 years</td>
          <td class=\\"drac-text drac-text-white\\">Matt Berry</td>
        </tr>
        <tr>
          <td class=\\"drac-text drac-text-white\\">Colin</td>
          <td class=\\"drac-text drac-text-white\\">Male</td>
          <td class=\\"drac-text drac-text-white\\">103 years</td>
          <td class=\\"drac-text drac-text-white\\">Mark Proksch</td>
        </tr>
      </tbody>
    </table>
  </div>
</div>
",
  "react": "<div style={{ display: \\"flex\\", flexDirection: \\"column\\", padding: \\"3rem\\" }}>
  <div style={{ marginBottom: 50 }}>
    <Table variant=\\"normal\\">
      <thead>
        <tr>
          <th className=\\"drac-text drac-text-white\\">Name</th>
          <th className=\\"drac-text drac-text-white\\">Gender</th>
          <th className=\\"drac-text drac-text-white\\">Age</th>
          <th className=\\"drac-text drac-text-white\\">Provided by</th>
        </tr>
      </thead>
      <tbody>
        <tr>
          <td className=\\"drac-text drac-text-white\\">Nandor</td>
          <td className=\\"drac-text drac-text-white\\">Male</td>
          <td className=\\"drac-text drac-text-white\\">758 years</td>
          <td className=\\"drac-text drac-text-white\\">Kayvan Novak</td>
        </tr>
        <tr>
          <td className=\\"drac-text drac-text-white\\">Nadja</td>
          <td className=\\"drac-text drac-text-white\\">Female</td>
          <td className=\\"drac-text drac-text-white\\">512 years</td>
          <td className=\\"drac-text drac-text-white\\">Natasia Demetriou</td>
        </tr>
        <tr>
          <td className=\\"drac-text drac-text-white\\">Laszlo</td>
          <td className=\\"drac-text drac-text-white\\">Male</td>
          <td className=\\"drac-text drac-text-white\\">329 years</td>
          <td className=\\"drac-text drac-text-white\\">Matt Berry</td>
        </tr>
        <tr>
          <td className=\\"drac-text drac-text-white\\">Colin</td>
          <td className=\\"drac-text drac-text-white\\">Male</td>
          <td className=\\"drac-text drac-text-white\\">103 years</td>
          <td className=\\"drac-text drac-text-white\\">Mark Proksch</td>
        </tr>
      </tbody>
    </Table>
  </div>
  <div style={{ marginBottom: 50 }}>
    <Table variant=\\"striped\\">
      <thead>
        <tr>
          <th className=\\"drac-text drac-text-white\\">Name</th>
          <th className=\\"drac-text drac-text-white\\">Gender</th>
          <th className=\\"drac-text drac-text-white\\">Age</th>
          <th className=\\"drac-text drac-text-white\\">Provided by</th>
        </tr>
      </thead>
      <tbody>
        <tr>
          <td className=\\"drac-text drac-text-white\\">Nandor</td>
          <td className=\\"drac-text drac-text-white\\">Male</td>
          <td className=\\"drac-text drac-text-white\\">758 years</td>
          <td className=\\"drac-text drac-text-white\\">Kayvan Novak</td>
        </tr>
        <tr>
          <td className=\\"drac-text drac-text-white\\">Nadja</td>
          <td className=\\"drac-text drac-text-white\\">Female</td>
          <td className=\\"drac-text drac-text-white\\">512 years</td>
          <td className=\\"drac-text drac-text-white\\">Natasia Demetriou</td>
        </tr>
        <tr>
          <td className=\\"drac-text drac-text-white\\">Laszlo</td>
          <td className=\\"drac-text drac-text-white\\">Male</td>
          <td className=\\"drac-text drac-text-white\\">329 years</td>
          <td className=\\"drac-text drac-text-white\\">Matt Berry</td>
        </tr>
        <tr>
          <td className=\\"drac-text drac-text-white\\">Colin</td>
          <td className=\\"drac-text drac-text-white\\">Male</td>
          <td className=\\"drac-text drac-text-white\\">103 years</td>
          <td className=\\"drac-text drac-text-white\\">Mark Proksch</td>
        </tr>
      </tbody>
    </Table>
  </div>
</div>;
",
  "title": "Variants",
}
`;
